--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -289,6 +289,9 @@
     - name: ExpressRoute
       tocHref: /azure/expressroute/
       topicHref: /azure/expressroute/
+    - name: Brandvägg
+      tocHref: /azure/firewall/
+      topicHref: /azure/firewall/
     - name: Riktlinjer
       tocHref: /azure/guidance/
       topicHref: /azure/guidance/
