--- a/articles/ansible/toc.yml
+++ b/articles/ansible/toc.yml
@@ -24,6 +24,12 @@
     - name: Hantera dynamiska lager
       href: ./ansible-manage-azure-dynamic-inventories.md
       maintainContext: true
+    - name: Skapa och konfigurera VMSS
+      href: ./ansible-create-configure-vmss.md
+    - name: Distribuera app till VMSS
+      href: ./ansible-deploy-app-vmss.md
+    - name: Skapa och konfigurera AKS-kluster
+      href: ./ansible-create-configure-aks.md
 - name: Referens
   items:
     - name: Spelboksroller
