--- a/articles/azure-databricks/TOC.yml
+++ b/articles/azure-databricks/TOC.yml
@@ -31,6 +31,9 @@
       href: 'https://docs.azuredatabricks.net/user-guide/jobs.html'
     - name: Anslut till datakällor
       href: databricks-connect-to-data-sources.md
+    - name: Använda tillsammans med Azure Data Factory
+      href: ../data-factory/transform-data-using-databricks-notebook.md
+      maintainContext: true
     - name: 'Ansluta till Excel, R och Python'
       href: connect-databricks-excel-python-r.md
     - name: Använda Databricks CLI från Azure Cloud Shell
