--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -279,6 +279,9 @@
           items: null
         - name: Läs in Data Lake Storage Gen2
           href: load-azure-data-lake-storage-gen2.md
+          items:
+            - name: Kopiera från Data Lake Storage Gen1
+              href: load-azure-data-lake-storage-gen2-from-gen1.md
         - name: Läs in SQL Data Warehouse
           href: load-azure-sql-data-warehouse.md
         - name: Läs in Data Lake Storage Gen1
