--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -63,6 +63,8 @@
           href: devtest-lab-create-first-vm.md
         - name: Ange principer för labbet
           href: devtest-lab-get-started-with-lab-policies.md
+        - name: Spara hemligheter i Azure Key Vault
+          href: devtest-lab-store-secrets-in-key-vault.md
         - name: Använd virtuella datorer i ett labb
           items:
             - name: 'Skapa VM:ar'
