--- a/articles/monitoring/toc.yml
+++ b/articles/monitoring/toc.yml
@@ -30,6 +30,12 @@
           href: ../monitoring-and-diagnostics/monitoring-overview-of-diagnostic-logs.md?toc=%2fazure%2fmonitoring%2ftoc.json
         - name: Samla in loggar mellan Azure-prenumerationer
           href: ../log-analytics/log-analytics-activity-logs-subscriptions.md?toc=%2fazure%2fmonitoring%2ftoc.json
+- name: Övervaka data
+  items:
+    - name: Datatyper och analysverktyg
+      href: monitoring-data-collection.md
+    - name: Källor för Azure-övervakningsdata
+      href: monitoring-data-sources.md
 - name: Övervaka resurser
   items:
     - name: Program
