--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -7,18 +7,10 @@
 - name: Snabbstarter
   expanded: true
   items:
-    - name: Kognitiv sökning
-      href: cognitive-search-quickstart-blob.md
     - name: Skapa en tjänst
       href: search-create-service-portal.md
-    - name: Portalen
-      items:
-        - name: Skapa ett index
-          href: search-create-index-portal.md
-        - name: Importera data
-          href: search-import-data-portal.md
-        - name: Sökutforskaren
-          href: search-explorer.md
+    - name: Kognitiv sökning
+      href: cognitive-search-quickstart-blob.md
     - name: .NET
       items:
         - name: Skapa ett index
@@ -39,18 +31,18 @@
           href: search-fiddler.md
 - name: Självstudier
   items:
+    - name: Använda inbyggda verktyg
+      href: search-get-started-portal.md
     - name: Utveckling av kognitiv sökning
       href: cognitive-search-tutorial-blob.md
-    - name: Indexera Azure SQL Database
-      href: search-indexer-tutorial.md
     - name: Indexera Azure-blobbar
       href: search-semi-structured-data.md
+    - name: Indexera Azure SQL Database
+      href: search-indexer-tutorial.md
     - name: Lägga till synonymer i .NET
       href: search-synonyms-tutorial-sdk.md
     - name: Lägg till automatisk komplettering i .NET
       href: search-autocomplete-tutorial.md
-    - name: Genomgång för portal
-      href: search-get-started-portal.md
 - name: Exempel
   items:
     - name: Azure-kodexempel
@@ -129,6 +121,8 @@
       items:
         - name: Indexdefinition
           href: search-what-is-an-index.md
+        - name: Skapa en index (portal)
+          href: search-create-index-portal.md
         - name: Analysverktyg
           items:
             - name: Textanalysverktyg
@@ -151,6 +145,8 @@
       items:
         - name: Push-överföring vs. Pull-indexering
           href: search-what-is-data-import.md
+        - name: Importera guide (portal)
+          href: search-import-data-portal.md
         - name: Bygga om ett index
           href: search-howto-reindex.md
         - name: Indexera stora datamängder
@@ -181,6 +177,8 @@
       items:
         - name: Grundläggande frågekonstruktion
           href: search-query-overview.md
+        - name: Sökutforskaren (portal)
+          href: search-explorer.md
         - name: Enkel frågesyntax
           href: 'https://docs.microsoft.com/rest/api/searchservice/simple-query-syntax-in-azure-search'
         - name: Lucene-frågesyntaxen
