--- a/articles/ansible/index.yml
+++ b/articles/ansible/index.yml
@@ -11,14 +11,14 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: devops
   ms.topic: landing-page
-  ms.date: 07/05/2018
+  ms.date: 07/16/2018
   ms.author: tarcher
-  ms.openlocfilehash: 3d885c6374530884e761ecbee837d6406dd3e894
-  ms.sourcegitcommit: ab3b2482704758ed13cccafcf24345e833ceaff3
+  ms.openlocfilehash: 1230422d4d33356938aaa9215479b290b56f22e5
+  ms.sourcegitcommit: e32ea47d9d8158747eaf8fee6ebdd238d3ba01f7
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 07/06/2018
-  ms.locfileid: "37868613"
+  ms.lasthandoff: 07/17/2018
+  ms.locfileid: "39089682"
 abstract:
   description: Använd <a href="http://www.ansible.com">Ansible</a> för att automatisera etablering i molnet, konfigurationshantering och programdistribution.
 sections:
@@ -40,13 +40,16 @@ sections:
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: Lär dig hur du använder Ansible för att skapa och hantera beräknings- och nätverksinfrastruktur i Azure.
+    text: Lär dig använda Ansible för att skapa och hantera infrastruktur för beräkning, nätverk och lagring i Azure.
   - type: list
     style: unordered
     items:
     - html: <a href="/azure/virtual-machines/linux/ansible-create-complete-vm?toc=%2Fen-us%2Fazure%2Fansible%2Ftoc.json&bc=%2Fen-us%2Fazure%2Fbread%2Ftoc.json">Skapa en virtuell Linux-dator, inklusive ett virtuellt nätverk, en offentlig IP-adress och ett virtuellt nätverkskort.</a>
     - html: <a href="./ansible-run-playbook-in-cloudshell">Ansluta till en virtuell Azure-dator och köra en Ansible-spelbok i Cloud Shell.</a>
     - html: <a href="./ansible-manage-azure-dynamic-inventories">Skapa och hantera ett dynamisk lager för dina Azure-resurser.</a>
+    - html: <a href="./ansible-create-configure-vmss">Skapa och hantera skalningsuppsättningar för virtuella datorer i Azure.</a>
+    - html: <a href="./ansible-deploy-app-vmss">Distribuera program till skalningsuppsättningar för virtuella datorer i Azure.</a>
+    - html: <a href="./ansible-create-configure-aks">Skapa och hantera Azure Kubernetes Service-kluster.</a>
 - title: Referens
   items:
   - type: list
