--- a/articles/cognitive-services/Face/index.yml
+++ b/articles/cognitive-services/Face/index.yml
@@ -14,12 +14,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 05/31/2018
   ms.author: nolachar
-  ms.openlocfilehash: 234b25ce674162cf69905689cec383c049bae6e6
-  ms.sourcegitcommit: 4597964eba08b7e0584d2b275cc33a370c25e027
+  ms.openlocfilehash: 32f5dfcbd26206268172109188395765cb80b884
+  ms.sourcegitcommit: e32ea47d9d8158747eaf8fee6ebdd238d3ba01f7
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 07/02/2018
-  ms.locfileid: "37341141"
+  ms.lasthandoff: 07/17/2018
+  ms.locfileid: "39089358"
 abstract:
   description: Det molnbaserade ansikts-API:et ger utvecklare åtkomst till avancerade ansiktsalgoritmer. Microsofts ansiktsalgoritmer möjliggör identifiering av ansiktsattribut och ansiktsigenkänning. Lär dig hur du analyserar innehåll på olika sätt med snabbstarter, självstudier och exempel.
 sections:
@@ -50,6 +50,15 @@ sections:
         src: media/index/logo_go.svg
       text: Go
       href: QuickStarts/Go
+- title: Steg för steg-självstudier
+  items:
+  - type: paragraph
+    text: 'Lär dig utveckla program med hjälp av tjänsten för ansiktsigenkänning:'
+  - type: list
+    style: unordered
+    items:
+    - html: <a href="/azure/cognitive-services/Face/Tutorials/FaceAPIinCSharpTutorial">Identifiera och rama in ansikten i en bild på Windows</a></li>
+    - html: <a href="/azure/cognitive-services/Face/Tutorials/FaceAPIinJavaForAndroidTutorial">Identifiera och rama in ansikten i en bild på Android</a></li>
 - title: Referens
   items:
   - type: list
