--- a/articles/cognitive-services/index.yml
+++ b/articles/cognitive-services/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 05/29/2018
   ms.author: cgronlun
-  ms.openlocfilehash: 314e756981076468056dd691bce7d24073d6ff4b
-  ms.sourcegitcommit: ab3b2482704758ed13cccafcf24345e833ceaff3
+  ms.openlocfilehash: 5ac8d7ca6f607acd54ab40402bb83376fd8b5d63
+  ms.sourcegitcommit: e32ea47d9d8158747eaf8fee6ebdd238d3ba01f7
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 07/06/2018
-  ms.locfileid: "37865029"
+  ms.lasthandoff: 07/17/2018
+  ms.locfileid: "39089589"
 abstract:
   description: Lär dig hur du skapar intelligenta algoritmer med dina appar, webbplatser och robotar så att de kan se, höra, tala och förstå användarnas behov genom naturlig kommunikation. Självstudier, snabbstarter, API-referenser och exempel med anvisningar.
 sections:
@@ -47,7 +47,7 @@ sections:
     rows:
     - title: Visuellt innehåll – analysera en bild
       values:
-      - href: /azure/cognitive-services/Computer-vision/Quickstarts/CSharp-analyze
+      - href: /azure/cognitive-services/Computer-vision/quickstarts-sdk/csharp-analyze-sdk
       - href: /azure/cognitive-services/Computer-vision/Quickstarts/java-analyze
       - href: /azure/cognitive-services/Computer-vision/Quickstarts/node-analyze
       - href: /azure/cognitive-services/Computer-vision/Quickstarts/python-analyze
@@ -94,6 +94,7 @@ sections:
   - type: list
     style: unordered
     items:
+    - html: <a href="/azure/cognitive-services/Face/Tutorials/FaceAPIinCSharpTutorial">Identifiera och rama in ansikten i en bild</a>
     - html: <a href="/azure/cognitive-services/bing-custom-search/tutorials/custom-search-web-page">Skapa en webbsida för anpassad sökning</a>
     - html: <a href="/azure/cognitive-services/luis/luis-nodejs-tutorial-build-bot-framework-sample">Använda Language Understanding (LUIS) i en robot</a>
     - html: <a href="/azure/cognitive-services/luis/luis-tutorial-batch-testing">Förbättra avsiktlig noggrannhet för hemautomatiseringskommandon</a>
