--- a/articles/iot-hub/index.yml
+++ b/articles/iot-hub/index.yml
@@ -11,12 +11,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 04/26/2018
   ms.author: dobett
-  ms.openlocfilehash: 35f60b4fef75c3eebb9ac203aaded26d32773c53
-  ms.sourcegitcommit: 0b4da003fc0063c6232f795d6b67fa8101695b61
+  ms.openlocfilehash: 9a173ee72f909c8f516f321592efde639e3a3a08
+  ms.sourcegitcommit: 0b05bdeb22a06c91823bd1933ac65b2e0c2d6553
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 07/05/2018
-  ms.locfileid: "37858355"
+  ms.lasthandoff: 07/17/2018
+  ms.locfileid: "39068254"
 abstract:
   description: Lär dig hur du använder IoT Hub för att ansluta, övervaka och styra miljontals Sakernas Internet-resurser. Självstudier, API-referenser, videor och annan dokumentation hjälper dig att distribuera tillförlitlig och dubbelriktad kommunikation mellan IoT-enheter och en lösnings serverdel.
 sections:
@@ -69,4 +69,4 @@ sections:
     - title: Språk
       html: <p><a href="/dotnet/api/microsoft.azure.devices">.NET (tjänst)</a></p><p><a href="/dotnet/api/microsoft.azure.devices.client">.NET (enheter)</a></p><p><a href="https://azure.github.io/azure-iot-sdk-c/index.html">C (enhets-SDK)</a></p><p><a href="/java/api/com.microsoft.azure.sdk.iot.service">Java (tjänst)</a></p><p><a href="/java/api/com.microsoft.azure.sdk.iot.device">Java (enheter)</a></p><p><a href="/javascript/api/azure-iothub/?view=azure-iot-typescript-latest">Node.js (tjänst)</a></p><p><a href="/javascript/api/azure-iot-device/?view=azure-iot-typescript-latest">Node.js (enheter)</a></p>
     - title: REST
-      html: <p><a href="/rest/api/iothub/iothubresource">REST (resursprovider)</a></p><p><a href="/rest/api/iothub/deviceapi">REST (enhetsidentiteter)</a></p><p><a href="/rest/api/iothub/devicetwinapi">REST (enhetstvillingar)</a></p><p><a href="/rest/api/iothub/httpruntime">REST (enhetsmeddelanden)</a></p><p><a href="/rest/api/iothub/jobapi">REST (jobb)</a></p>
+      html: <p><a href="/rest/api/iothub/device">REST (enhet)</a></p><p><a href="/rest/api/iothub/service">REST (tjänst)</a></p><p><a href="/rest/api/iothub/iothubresource">REST (IoT Hub-resurs)</a></p><p><a href="/rest/api/iothub/certificates">REST (certifikat)</a></p>
