--- a/articles/virtual-network/toc.yml
+++ b/articles/virtual-network/toc.yml
@@ -35,7 +35,7 @@
       href: policy-samples.md
 - name: Begrepp
   items:
-    - name: Säkerhet
+    - name: Säkerhetsgrupper
       href: security-overview.md
     - name: Routning
       href: virtual-networks-udr-overview.md
@@ -45,7 +45,7 @@
       href: virtual-network-peering-overview.md
     - name: Virtuellt nätverk för Azure-tjänster
       href: virtual-network-for-azure-services.md
-    - name: Nätverk för behållare
+    - name: Nätverk för containrar
       href: ../aks/networking-overview.md?toc=%2fazure%2fvirtual-network%2ftoc.json
     - name: Verksamhetskontinuitet
       href: virtual-network-disaster-recovery-guidance.md
