--- a/articles/service-fabric-mesh/index.yml
+++ b/articles/service-fabric-mesh/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 06/26/2018
   ms.author: ryanwi
-  ms.openlocfilehash: e5fc62d84ace2acd46816a7116ea1cf2198be63f
-  ms.sourcegitcommit: 0b05bdeb22a06c91823bd1933ac65b2e0c2d6553
+  ms.openlocfilehash: fccd805f6d4abcf7005fca0cc6f4d368ac5764f1
+  ms.sourcegitcommit: e32ea47d9d8158747eaf8fee6ebdd238d3ba01f7
   ms.translationtype: HT
   ms.contentlocale: sv-SE
   ms.lasthandoff: 07/17/2018
-  ms.locfileid: "39073707"
+  ms.locfileid: "39090051"
 abstract:
   description: Azure Service Fabric Mesh är en helt hanterad tjänst som gör det möjligt för utvecklare att skapa och distribuera verksamhetskritiska program utan att behöva hantera någon infrastruktur.  Använd Service Fabric Mesh för att skapa och köra säkra, distribuerade mikrotjänstprogram som kan skalas på begäran. Lär dig att använda Service Fabric Mesh med hjälp av våra snabbstarter och självstudier.  Mer information finns i denna <a href="/azure/service-fabric-mesh/service-fabric-mesh-overview">översikt över Service Fabric Mesh</a>.
 sections:
@@ -37,7 +37,7 @@ sections:
         src: https://docs.microsoft.com/media/logos/logo_netcore.svg
       text: Skapa och distribuera en webbapp
       href: /azure/service-fabric-mesh/service-fabric-mesh-quickstart-dotnet-core
-- title: Stegvisa självstudier
+- title: Steg för steg-självstudier
   items:
   - type: paragraph
     text: Lär dig att skapa, felsöka och distribuera en Azure Service Fabric Mesh-app.
@@ -45,15 +45,3 @@ sections:
     style: unordered
     items:
     - html: <a href="/azure/service-fabric-mesh/service-fabric-mesh-tutorial-create-dotnetcore">Distribuera ett a .NET Core-program</a>
-- title: Exempel
-  items:
-  - type: paragraph
-    text: 'Hitta .NET Core-exempelprogram för Windows och Linux:'
-  - type: list
-    style: unordered
-    items:
-    - html: <a href="https://github.com/Azure-Samples/service-fabric-mesh/tree/master/src/helloworld">Hello world!</a>
-    - html: <a href="https://github.com/Azure-Samples/service-fabric-mesh/tree/master/src/azurefiles-volume">Azure Files-volym</a>
-    - html: <a href="https://github.com/Azure-Samples/service-fabric-mesh/tree/master/src/todolistapp">Att göra-lista</a>
-    - html: <a href="https://github.com/Azure-Samples/service-fabric-mesh/tree/master/src/visualobjects">Visuella objekt</a>
-    - html: <a href="https://github.com/Azure-Samples/service-fabric-mesh/tree/master/src/votingapp">Röstning</a>
