--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -17,6 +17,8 @@
           items:
             - name: 'C#'
               href: luis-get-started-cs-get-intent.md
+            - name: Go
+              href: luis-get-started-go-get-intent.md
             - name: Java
               href: luis-get-started-java-get-intent.md
             - name: JavaScript
@@ -33,6 +35,8 @@
           items:
             - name: 'C#'
               href: luis-get-started-cs-add-utterance.md
+            - name: Go
+              href: luis-get-started-go-add-utterance.md
             - name: Java
               href: luis-get-started-java-add-utterance.md
             - name: JavaScript
@@ -220,7 +224,7 @@
             - name: Visa slutpunktsanvändning med PowerShell
               href: luis-how-to-manage-from-cloud-shell.md
             - name: Fördela slutpunktskvoten mellan nycklar med Traffic Manager
-              href: traffic-manager.md
+              href: luis-traffic-manager.md
     - name: Migrera till V2 API
       href: migration-v1-to-v2.md
     - name: Hitta region programmässigt
