--- a/articles/iot-dps/toc.yml
+++ b/articles/iot-dps/toc.yml
@@ -176,7 +176,7 @@
     - name: Kunddataförfrågningar
       href: iot-dps-customer-data-requests.md
     - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/?category=internet-of-things'
+      href: 'https://azure.microsoft.com/roadmap/?category=iot'
     - name: Device Explorer-verktyg
       href: 'https://github.com/Azure/azure-iot-sdk-csharp/tree/master/tools/DeviceExplorer'
     - name: iothub-diagnostics tool
