--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -72,9 +72,9 @@
           href: how-to-install-iot-edge-linux.md
         - name: Linux ARM32
           href: how-to-install-iot-edge-linux-arm.md
-        - name: Windows med Windows-behållare
+        - name: Windows med Windows-containrar
           href: how-to-install-iot-edge-windows-with-windows.md
-        - name: Windows med Linux-behållare
+        - name: Windows med Linux-containrar
           href: how-to-install-iot-edge-windows-with-linux.md
         - name: IoT Core
           href: how-to-install-iot-core.md
@@ -165,7 +165,7 @@
     - name: Azure IoT Developer Center
       href: 'https://azure.microsoft.com/develop/iot/'
     - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/?category=internet-of-things'
+      href: 'https://azure.microsoft.com/roadmap/?category=iot'
     - name: Azure IoT Edge för VS Code
       href: 'https://marketplace.visualstudio.com/items?itemName=vsciot-vscode.azure-iot-edge'
     - name: Azure IoT Toolkit för VS Code
